--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start:react": "cd ./react-app && npm start",
     "start:api": "cd ./api && npm start"
   },
   "author": "",
