--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7"
   }
 }
